# software-builder

./: .env.example  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  DATA_MODEL.md  FLASK_APP.md  LICENSE  MIGRATIONS.md  agents.md  alembic.ini  bb.edn  deps.edn  justfile  pyproject.toml  readme.md  tests.edn
.github/workflows/: ci.yml
.pi/: EXAMPLE_SESSION.md  JUSTFILE_REFERENCE.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  SESSION3_FLASK.md  SESSION4_SESSIONS.md  SESSION5_SYSTEM_PROMPTS.md  SYSTEM.md  UPDATE_SESSION_FORM_SIMPLIFIED.md
alembic/: env.py
alembic/versions/: 843d992771f6_initial_schema_with_all_models.py
config/: config.development.yaml  config.production.yaml  config.test.yaml  config.yaml
dev/: dev.clj  user.clj
docs/: data-model-design.md  llm-agent-data-model-review.md  llm-agent-memory-system.md  memory-decay-and-consolidation.md
src/software_builder/: __init__.py  app.py  cli.py  config.py  llm.clj  main.clj  model.clj  schema.clj  tui.clj
src/software_builder/models/: __init__.py  base.py  dataset.py  document.py  prompt.py  session.py  trace.py
src/software_builder/routes/: __init__.py  main.py  sessions.py  system_prompts.py
src/software_builder/utils/: __init__.py  seed_data.py
templates/: about.html  base.html  index.html
templates/errors/: 404.html  500.html
templates/sessions/: detail.html  list.html  new.html
templates/system_prompts/: detail.html  list.html  new.html
test/software_builder/: llm_test.clj  main_test.clj  model_test.clj  test_helper.clj
tests/: conftest.py  test_app.py  test_config.py  test_models.py  test_sessions.py  test_system_prompts.py
